--- a/index/clase4.html
+++ b/index/clase4.html
@@ -16,20 +16,23 @@
     <div class="login">
         <div class="form-container">
 
-            <h1 class="tittle">Create a new password</h1>
+            <h1 class="tittle">My Account</h1>
 
             <form action="/" class="form">
+                <div>
                 <label for="name" class="label">Name</label>
                 <input type="text" id="name" placeholder="Name" class="input input-name">
 
-                <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="***********" class="input input-password">
+                <label for="password" class="label">Email</label>
+                <input type="text" id="email" placeholder="nombre@example.com" class="input input-password">
 
                 <label for="password" class="label">Password</label>
-                <input type="password" id="password" placeholder="***********" class="input input-password">
+                <input type="password" id="password" placeholder="***********" class="input input-password"> 
+                </div>
+               
 
 
-                <input type="submit" value="Confirm" class="primary-button login-button">
+                <input type="submit" value="Create" class="primary-button login-button">
 
             </form>
         </div>
