--- a/index/clase5.html
+++ b/index/clase5.html
@@ -19,16 +19,16 @@
       <form action="/" class="form">
         <div>
           <label for="name" class="label">Name</label>
-          <input type="text" id="name" placeholder="Nombre" class="input input-name">
+          <p class="value">Nombre</p>
 
           <label for="email" class="label">Email</label>
-          <input type="text" id="email" placeholder="ejemplo@example.com" class="input input-email">
+          <p class="value">nombre@ejemplo.com</p>
 
           <label for="password" class="label">Password</label>
-          <input type="password" id="password" placeholder="*********" class="input input-password">
+          <p class="value">***************</p>
         </div>
 
-        <input type="submit" value="Create" class="primary-button login-button">
+        <input type="submit" value="Edit" class="secondary-button login-button">
       </form>
     </div>
   </div>
